# h24s_17-raspi

./: .env.dev  README.md  pyproject.toml
.github/workflows/: main.yml
.github/workflows-disabled/: main.yml
src/h24s_17_raspi/: __init__.py  button.py  camera.py  client.py  loop_shutter.py
