[project]
name = "h24s-17-raspi"
version = "0.1.0"
description = "24春ハッカソン チーム17 raspberrypi"
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "h24s_17_raspi:hello"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
