[project]
name = "h24s-17-raspi"
version = "0.1.0"
description = "24春ハッカソン チーム17 raspberrypi"
dependencies = [
    "picamera2>=0.3.18",
    "aiohttp>=3.9.5",
    "Pillow>=10.3.0",
    "aiochannel>=1.2.1",
    "aiofiles>=23.2.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
hello = "h24s_17_raspi:hello"
capture = "h24s_17_raspi.camera:capture"
loop-shutter = "h24s_17_raspi.loop_shutter:loop_shutter"
watch-button = "h24s_17_raspi.button:run_watch_button"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.10.0",
    "ruff>=0.4.9",
    "types-aiofiles>=23.2.0.20240403",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Inherit rules from pycodestyle, pyflakes, flake8-simplify, isort
select = ["F", "E", "SIM", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
